--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -2,9 +2,9 @@
     --mainfont-nanum: "nanumSquareNeo";
     --mainfont-nexon: "nexonLv1";
   
-    --black: #000;
-    --black100: #000;
-    --black200: #000;
+    --black: #0f0f0f;
+    --blackOver: #272727;
+    --line: rgba(255, 255, 255, 0.2);;
     --black300: #000;
     --black400: #000;
     --black500: #000;
@@ -15,6 +15,8 @@
     --white300: #fff;
     --white400: #fff;
     --white500: #fff;
+
+    --red: #f00;
     
     // 폰트 셋팅
     font-size: 16px;
