--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -36,6 +36,7 @@
                 align-items: center;
                 padding: 0 10px;
                 border-radius: 10px;
+                transition: all 0.3s;
                 
                 svg {
                     width: 24px;
@@ -51,37 +52,47 @@
     }
 
     .keyword {
-        padding: 30px 10px;
+        padding: 20px 10px;
         border-bottom: 1px solid var(--line);
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
 
         li {
-            padding: 7px 16px;
-            border: 1px solid var(--line);
-            border-radius: 20px;
+            display: flex;
 
             a {
-                font-size: 1rem;
+                font-size: 0.9rem;
+                padding: 7px 16px;
+                border: 1px solid var(--line);
+                border-radius: 20px;
+                background-color: var(--black);
+            
+                &:hover {
+                    background-color: var(--blackOver);
+                }
             }
         }
     }
 }
 
 .header__sns {
-    padding: 30px 0;
+    width: 260px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    background-color: var(--black);
+
     ul {
         display: flex;
-        align-items: center;
         justify-content: center;
-
+        gap: 10px;
         li {
             a {
                 svg {
                     width: 24px;
                     height: 24px;
-                    margin-right: 24px;
                 }
             }
         }
