--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -10,8 +10,8 @@
     --black500: #000;
     
     --white: #fff;
-    --white100: #fff;
-    --white200: #fff;
+    --icon: #d8d8d8;
+    --placeholder: #a8a8a8;
     --white300: #fff;
     --white400: #fff;
     --white500: #fff;
