--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -123,3 +123,11 @@
     100% {transform: rotate(0) scale(0.7); border-radius: 40px;}
 }
 
+@media (max-width: 800px) {
+    .header__logo {
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+}
+
