--- a/src/assets/scss/section/_layout.scss
+++ b/src/assets/scss/section/_layout.scss
@@ -21,6 +21,7 @@
 #main {
     min-height: 100vh;
     margin-left: 260px;
+    padding: 0 30px;
     width: calc(100% - 260px);
     background-color: #111;
 }
@@ -33,4 +34,13 @@
     width: calc(100% - 260px);
     color: var(--placeholder);
     font-size: 12px;
+}
+
+@media (max-width: 800px) {
+    #header {left: -260px;}
+
+    #main {
+        width: 100%;
+        margin-left: 0;
+    }
 }
