--- a/src/assets/scss/setting/_common.scss
+++ b/src/assets/scss/setting/_common.scss
@@ -3,3 +3,51 @@ body {
     background-color: var(--black);
     color: var(--white);
 }
+
+section h2 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+.play__icon {
+    a {
+        position: relative;
+        display: block;
+
+        &::before {
+            background-color: rgba(0,0,0,.18);
+            content: "";
+            height: 100%;
+            left: 0;
+            position: absolute;
+            top: 0;
+            transition: background-color .3s;
+            width: 100%;
+        }
+    
+        &:hover:before {
+            background-color: transparent;
+        }
+    
+        &::after {
+            background: rgba(0,0,0,.588) url(../../img/icon/play.svg) no-repeat 50%;
+            border-radius: 50%;
+            content: "";
+            height: 80px;
+            left: 50%;
+            opacity: 0;
+            position: absolute;
+            top: 50%;
+            -webkit-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
+            transition: opacity .3s;
+            width: 80px;
+        }
+    
+        &:hover:after {
+            opacity: 1;
+        }
+    }
+}
+
