추천개발자 작업

--- a/src/assets/scss/setting/_common.scss
+++ b/src/assets/scss/setting/_common.scss
@@ -7,7 +7,7 @@ body {
 section h2 {
     font-size: 20px;
     font-weight: bold;
-    margin-top: 20px;
+    margin: 20px 0 10px;
 }
 
 .play__icon {
