Swiper 이미지 슬라이드 작업

--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -131,3 +131,8 @@
     }
 }
 
+@media (max-width: 330px) {
+    .header__logo a em {width: 30px; height: 30px;}
+    .header__logo a span {font-size: 15px;}
+}
+
