--- a/src/assets/scss/section/developer.scss
+++ b/src/assets/scss/section/developer.scss
@@ -1,35 +1,23 @@
-#devaloper {}
+.developer {
+    text-align: center;
 
-.developer__inner {
-    display: flex;
-    overflow: hidden;
-
-    .developer {
-        text-align: center;
-
-        .developer__img {
-            width: 100px;
-            height: 100px;
-
-            a {
-                display: block;
-                width: 100px;
-                height: 100px;
-                border-radius: 100px;
-                overflow: hidden;
-            }
+    .developer__img {
+        a {
+            border-radius: 100px;
+            overflow: hidden;
         }
-        .developer__info {
-            a {
-                width: 100px;
-                display: block;
-                overflow: hidden;
-                white-space: nowrap;
-                text-overflow: ellipsis;
-                word-break: break-all;
-            }
-        }    
     }
+    .developer__info {
+        a {
+            width: 100%;
+            margin-top: 10px;
+            display: block;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            word-break: break-all;
+        }
+    }    
 }
 
 #developerPage {
