--- a/src/assets/scss/setting/_common.scss
+++ b/src/assets/scss/setting/_common.scss
@@ -51,3 +51,12 @@ section h2 {
     }
 }
 
+// 섹션 로딩 소스
+.isLoading {
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+.isLoaded {
+    opacity: 1;
+    transition: opacity 0.5s; 
+}
